// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset component renders as expected 1`] = `
<fieldset
  className="sc-bwzfXH kzYDuJ"
>
  <div />
  <div>
    Fieldset child
  </div>
</fieldset>
`;

exports[`Fieldset component renders as expected with extra content 1`] = `
<fieldset
  className="sc-bwzfXH kzYDuJ"
>
  <div>
    <legend
      className="sc-bdVaJa JbwBs"
    >
      I am legend
    </legend>
    Extra Content
  </div>
  <div>
    Fieldset child
  </div>
</fieldset>
`;

exports[`Fieldset component renders as expected with legendText 1`] = `
<fieldset
  className="sc-bwzfXH kzYDuJ"
>
  <div>
    <legend
      className="sc-bdVaJa JbwBs"
    >
      I am legend
    </legend>
  </div>
  <div>
    Fieldset child
  </div>
</fieldset>
`;
